# pfits

./: .gitignore  Makefile.am  README.md  configure.ac
config/: package.m4
src/: Makefile.am  fitsProcess.c  libpfits.la  pfits.c  pfits.h  pfitsUtil_copyToNew.c  pfitsUtil_createFoldTemplate.c  pfitsUtil_foldmode_combineFreq.c  pfitsUtil_foldmode_combineTime.c  pfitsUtil_foldmode_extractFreq.c  pfitsUtil_foldmode_extractTime.c  pfitsUtil_foldmode_useTemplate.c  pfitsUtil_headerInformation.c  pfitsUtil_searchMode_extractPart.c  pfitsUtil_searchmode_combineFreq.c  pfitsUtil_searchmode_combineTime.c  pfitsUtil_updateMetaData.c  pfits_bpass.c  pfits_describe.c  pfits_fft.c  pfits_fv.c  pfits_plot.c  pfits_plotfold.c  pfits_plotsearch.c  pfits_sim.c
